--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "covid-19_tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://KushRohra.github.io/Covid-19_Tracker", 
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,6 +18,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
